--- a/app/src/main/res/layout/activity_add_payment.xml
+++ b/app/src/main/res/layout/activity_add_payment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
     tools:context=".AddPaymentActivity">
 
     <LinearLayout
@@ -71,7 +72,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
                 android:paddingStart="4dp"
-                android:background="#fff"
+                android:background="@color/viewGrey"
                 android:text="Cash"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
@@ -82,7 +83,7 @@
                 android:gravity="end"
                 android:layout_marginEnd="2dp"
                 android:layout_marginTop="2dp"
-                android:background="#fff"
+                android:background="@color/viewGrey"
                 android:layout_marginBottom="2dp"
                 android:orientation="horizontal">
 
@@ -92,7 +93,7 @@
                     android:layout_height="15dp"
                     android:layout_marginEnd="20dp"
                     android:checked="false"
-                    android:background="#fff"
+                    android:background="@color/viewGrey"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
                     android:textOff="off"
@@ -124,7 +125,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
                 android:paddingStart="4dp"
-                android:background="#fff"
+                android:background="@color/viewGrey"
                 android:text="Via Cheque"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
@@ -135,7 +136,7 @@
                 android:gravity="end"
                 android:layout_marginEnd="2dp"
                 android:layout_marginTop="2dp"
-                android:background="#fff"
+                android:background="@color/viewGrey"
                 android:layout_marginBottom="2dp"
                 android:orientation="horizontal">
 
@@ -145,7 +146,7 @@
                     android:layout_height="15dp"
                     android:layout_marginEnd="20dp"
                     android:checked="false"
-                    android:background="#fff"
+                    android:background="@color/viewGrey"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
                     android:textOff="off"
@@ -178,7 +179,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
                 android:paddingStart="4dp"
-                android:background="#fff"
+                android:background="@color/viewGrey"
                 android:text="Via Bank Transfer"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
@@ -189,7 +190,7 @@
                 android:gravity="end"
                 android:layout_marginEnd="2dp"
                 android:layout_marginTop="2dp"
-                android:background="#fff"
+                android:background="@color/viewGrey"
                 android:layout_marginBottom="2dp"
                 android:orientation="horizontal">
 
@@ -199,7 +200,7 @@
                     android:layout_height="15dp"
                     android:layout_marginEnd="20dp"
                     android:checked="false"
-                    android:background="#fff"
+                    android:background="@color/viewGrey"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
                     android:textOff="off"
@@ -231,7 +232,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
                 android:paddingStart="4dp"
-                android:background="#fff"
+                android:background="@color/viewGrey"
                 android:text="Via Pay Order"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
@@ -242,7 +243,7 @@
                 android:gravity="end"
                 android:layout_marginEnd="2dp"
                 android:layout_marginTop="2dp"
-                android:background="#fff"
+                android:background="@color/viewGrey"
                 android:layout_marginBottom="2dp"
                 android:orientation="horizontal">
 
@@ -252,7 +253,7 @@
                     android:layout_height="15dp"
                     android:layout_marginEnd="20dp"
                     android:checked="false"
-                    android:background="#fff"
+                    android:background="@color/viewGrey"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
                     android:textOff="off"
@@ -284,7 +285,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
                 android:paddingStart="4dp"
-                android:background="#fff"
+                android:background="@color/viewGrey"
                 android:text="Via Credit / Debit Card"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
@@ -295,7 +296,7 @@
                 android:gravity="end"
                 android:layout_marginEnd="2dp"
                 android:layout_marginTop="2dp"
-                android:background="#fff"
+                android:background="@color/viewGrey"
                 android:layout_marginBottom="2dp"
                 android:orientation="horizontal">
 
@@ -305,7 +306,7 @@
                     android:layout_height="15dp"
                     android:layout_marginEnd="20dp"
                     android:checked="false"
-                    android:background="#fff"
+                    android:background="@color/viewGrey"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
                     android:textOff="off"
